tests/negative/symbols/use_undef6.orng
fn main() -> Int {
    let x: [4]Int = undefined
    x[2]
}